fix: cover image not responsive.

--- a/src/components/single-character/single-character.css
+++ b/src/components/single-character/single-character.css
@@ -8,8 +8,9 @@
 }
 
 .SingleCharacter img {
-  width: 200px;
   margin-right: 2rem;
+  max-width: 250px;
+  object-fit: contain;
 }
 
 .SingleCharacter .top .header {
